--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 @import url("reset.css");
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -13,6 +17,26 @@
     grid-row: 1 / 3;
     height: 100vh;
     padding: 16px;
+}
+
+.branding {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    gap: 16px;
+}
+
+.branding h2 {
+    font-size: 2rem;
+}
+
+.dashboard-icon {
+    width: 48px;
+    height: 48px;
+}
+
+.dashboard-icon svg path {
+    fill: white;
 }
 
 .header {
